--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <state key="normal" title="+"/>
                                         <connections>
-                                            <segue destination="RSb-Th-FQ0" kind="show" id="Jnt-c2-eeg"/>
+                                            <segue destination="RSb-Th-FQ0" kind="show" id="gvB-wX-glA"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGo-xt-aS9">
@@ -121,11 +121,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w6d-B3-0kz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-224" y="455"/>
+            <point key="canvasLocation" x="-461" y="571"/>
         </scene>
         <!--New NotesVC-->
         <scene sceneID="Sod-fr-SQA">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="USS-KK-48e" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="RSb-Th-FQ0" customClass="NewNotesVC" customModule="Your_Valult" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KzO-a1-q6x"/>
@@ -156,7 +157,6 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                         <state key="normal" title="Back"/>
                                         <connections>
-                                            <action selector="btnBack:" destination="V93-Al-QKK" eventType="touchUpInside" id="1R7-Tf-NGp"/>
                                             <action selector="btnBack:" destination="RSb-Th-FQ0" eventType="touchUpInside" id="bpa-k5-5nF"/>
                                         </connections>
                                     </button>
@@ -168,8 +168,7 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                         <state key="normal" title="Save"/>
                                         <connections>
-                                            <action selector="btnBack:" destination="V93-Al-QKK" eventType="touchUpInside" id="KDt-XF-rIp"/>
-                                            <action selector="btnBack:" destination="RSb-Th-FQ0" eventType="touchUpInside" id="wGU-Qp-aCh"/>
+                                            <action selector="btnSave:" destination="RSb-Th-FQ0" eventType="touchUpInside" id="Z8p-Li-uNk"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -184,18 +183,31 @@
                                     <constraint firstAttribute="height" constant="60" id="v2y-o7-7Nv"/>
                                 </constraints>
                             </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Body" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IQF-Gf-Dna">
+                                <rect key="frame" x="6" y="68" width="588" height="383"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xuT-OG-Gca" firstAttribute="top" secondItem="Izx-gO-T50" secondAttribute="top" id="1s6-Wk-9DE"/>
+                            <constraint firstItem="0ZY-iC-Bm0" firstAttribute="top" secondItem="IQF-Gf-Dna" secondAttribute="bottom" constant="100" id="3rZ-HI-ThI"/>
+                            <constraint firstAttribute="trailing" secondItem="IQF-Gf-Dna" secondAttribute="trailing" constant="6" id="Rpe-vB-X0q"/>
+                            <constraint firstItem="IQF-Gf-Dna" firstAttribute="top" secondItem="xuT-OG-Gca" secondAttribute="bottom" constant="8" id="VaT-bG-CfC"/>
                             <constraint firstItem="xuT-OG-Gca" firstAttribute="leading" secondItem="Izx-gO-T50" secondAttribute="leading" id="dtp-PH-B3j"/>
+                            <constraint firstItem="IQF-Gf-Dna" firstAttribute="leading" secondItem="Izx-gO-T50" secondAttribute="leading" constant="6" id="j55-2y-5WZ"/>
                             <constraint firstAttribute="trailing" secondItem="xuT-OG-Gca" secondAttribute="trailing" id="vk4-mZ-yfE"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btnSave" destination="GKN-xM-tbQ" id="1mU-29-5bj"/>
+                        <outlet property="txtbody" destination="IQF-Gf-Dna" id="T2l-Jv-liL"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="USS-KK-48e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="616" y="472"/>
+            <point key="canvasLocation" x="298" y="688"/>
         </scene>
         <!--Photos-->
         <scene sceneID="hAg-WR-jT3">
@@ -253,7 +265,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GiH-gI-BTr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="994" y="-509"/>
+            <point key="canvasLocation" x="362" y="-157"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ooR-pJ-4Jv">
@@ -391,7 +403,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHk-H9-LYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1181" y="667"/>
+            <point key="canvasLocation" x="-3197" y="499"/>
         </scene>
         <!--Entry Internet AccountVC-->
         <scene sceneID="WE3-WN-Ili">
@@ -565,7 +577,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YZL-x2-z8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-825" y="1448"/>
+            <point key="canvasLocation" x="-2740" y="1268"/>
         </scene>
         <!--Photos-->
         <scene sceneID="Fe4-5U-U75">
@@ -743,7 +755,77 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7kT-as-G1v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1436" y="1448"/>
+            <point key="canvasLocation" x="-3540" y="1288"/>
+        </scene>
+        <!--Update NotesVC-->
+        <scene sceneID="IzV-7V-eDv">
+            <objects>
+                <viewController id="7rM-AF-SAe" customClass="updateNotesVC" customModule="Your_Valult" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wb7-Fy-sdq"/>
+                        <viewControllerLayoutGuide type="bottom" id="F3c-MQ-HDm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uXp-an-ne7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gW-wi-cfr">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0z-bs-72g">
+                                        <rect key="frame" x="8" y="22" width="39" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="e4T-hL-ogp"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="Back"/>
+                                        <connections>
+                                            <action selector="btnBack:" destination="7rM-AF-SAe" eventType="touchUpInside" id="dFe-af-n1y"/>
+                                            <action selector="btnBack:" destination="V93-Al-QKK" eventType="touchUpInside" id="p8w-X4-D0u"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0nk-pV-iWo">
+                                        <rect key="frame" x="554" y="20" width="38" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="wxT-hp-abf"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="Save"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HKC-2g-GMs">
+                                        <rect key="frame" x="227" y="28" width="146" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="a6m-Fe-Tm4"/>
+                                            <constraint firstAttribute="width" constant="146" id="vAv-WV-vZ3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.066666666669999999" green="0.63529411759999999" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="0nk-pV-iWo" secondAttribute="bottom" constant="8" id="1SL-Or-CUn"/>
+                                    <constraint firstAttribute="bottom" secondItem="y0z-bs-72g" secondAttribute="bottom" constant="8" id="6jJ-fc-Kdd"/>
+                                    <constraint firstItem="y0z-bs-72g" firstAttribute="leading" secondItem="0gW-wi-cfr" secondAttribute="leading" constant="8" id="E6A-B1-2To"/>
+                                    <constraint firstAttribute="bottom" secondItem="HKC-2g-GMs" secondAttribute="bottom" constant="8" id="Pkb-ZL-jRM"/>
+                                    <constraint firstAttribute="trailing" secondItem="0nk-pV-iWo" secondAttribute="trailing" constant="8" id="j3e-ne-qsd"/>
+                                    <constraint firstItem="HKC-2g-GMs" firstAttribute="centerX" secondItem="0gW-wi-cfr" secondAttribute="centerX" id="jGC-92-1TM"/>
+                                    <constraint firstAttribute="height" constant="60" id="mth-9X-x1z"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0gW-wi-cfr" firstAttribute="top" secondItem="uXp-an-ne7" secondAttribute="top" id="JOl-wK-Xsj"/>
+                            <constraint firstAttribute="trailing" secondItem="0gW-wi-cfr" secondAttribute="trailing" id="f1g-CM-cob"/>
+                            <constraint firstItem="0gW-wi-cfr" firstAttribute="leading" secondItem="uXp-an-ne7" secondAttribute="leading" id="s6b-8Y-9hp"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xDx-UO-3s9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1264" y="1361"/>
         </scene>
     </scenes>
     <resources>
