--- a/Your Valult/Base.lproj/Main.storyboard
+++ b/Your Valult/Base.lproj/Main.storyboard
@@ -183,7 +183,7 @@
                                     <constraint firstAttribute="height" constant="60" id="v2y-o7-7Nv"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Body" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IQF-Gf-Dna">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IQF-Gf-Dna">
                                 <rect key="frame" x="6" y="68" width="588" height="383"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -334,15 +334,15 @@
                                     <constraint firstItem="l0C-kb-R6l" firstAttribute="centerX" secondItem="5T5-Lt-dzb" secondAttribute="centerX" id="dg9-It-TVE"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="77" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fmJ-xS-uSi">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fmJ-xS-uSi">
                                 <rect key="frame" x="0.0" y="60" width="600" height="491"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="77" id="zUG-J1-Qcq" customClass="InternetAccountCell" customModule="Your_Valult" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="77"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="101" id="zUG-J1-Qcq" customClass="InternetAccountCell" customModule="Your_Valult" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="101"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zUG-J1-Qcq" id="kHG-CS-v29">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="76.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOq-cN-gv4">
@@ -364,18 +364,30 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="updated Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Nc-21-dkr">
+                                                    <rect key="frame" x="488" y="71" width="104" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="22v-gl-JV4"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="sOq-cN-gv4" firstAttribute="centerX" secondItem="kHG-CS-v29" secondAttribute="centerX" id="37O-yw-GF1"/>
                                                 <constraint firstItem="Xwk-Ff-Xqk" firstAttribute="trailing" secondItem="kHG-CS-v29" secondAttribute="trailingMargin" id="C0d-bs-Zek"/>
+                                                <constraint firstAttribute="bottom" secondItem="0Nc-21-dkr" secondAttribute="bottom" constant="8" id="G5Z-lh-DpS"/>
                                                 <constraint firstItem="Xwk-Ff-Xqk" firstAttribute="top" secondItem="kHG-CS-v29" secondAttribute="topMargin" id="Qgx-ch-cYc"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Nc-21-dkr" secondAttribute="trailing" constant="8" id="TC0-lb-ecP"/>
                                                 <constraint firstItem="Xwk-Ff-Xqk" firstAttribute="leading" secondItem="kHG-CS-v29" secondAttribute="leadingMargin" id="YAo-N8-GSj"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="sOq-cN-gv4" secondAttribute="bottom" constant="5.5" id="zKo-Fu-irY"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="sOq-cN-gv4" secondAttribute="bottom" constant="29.5" id="zKo-Fu-irY"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="lblInternetAccountName" destination="Xwk-Ff-Xqk" id="g98-uM-yIO"/>
                                             <outlet property="lblInternetAccoutUserName" destination="sOq-cN-gv4" id="p6n-yZ-yqC"/>
+                                            <outlet property="updatedDate" destination="0Nc-21-dkr" id="EMv-zt-HSj"/>
                                             <segue destination="ITA-rA-AxG" kind="show" identifier="goToUpdateVC" id="X7W-R5-sQo"/>
                                         </connections>
                                     </tableViewCell>
@@ -404,7 +416,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHk-H9-LYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3197" y="499"/>
+            <point key="canvasLocation" x="-3355" y="473"/>
         </scene>
         <!--Entry Internet AccountVC-->
         <scene sceneID="WE3-WN-Ili">
@@ -759,76 +771,6 @@
             <point key="canvasLocation" x="-3540" y="1288"/>
         </scene>
         <!--Update NotesVC-->
-        <scene sceneID="IzV-7V-eDv">
-            <objects>
-                <viewController id="7rM-AF-SAe" customClass="updateNotesVC" customModule="Your_Valult" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Wb7-Fy-sdq"/>
-                        <viewControllerLayoutGuide type="bottom" id="F3c-MQ-HDm"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="uXp-an-ne7">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0gW-wi-cfr">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0z-bs-72g">
-                                        <rect key="frame" x="8" y="22" width="39" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="e4T-hL-ogp"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                        <state key="normal" title="Back"/>
-                                        <connections>
-                                            <action selector="btnBack:" destination="7rM-AF-SAe" eventType="touchUpInside" id="dFe-af-n1y"/>
-                                            <action selector="btnBack:" destination="V93-Al-QKK" eventType="touchUpInside" id="p8w-X4-D0u"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0nk-pV-iWo">
-                                        <rect key="frame" x="554" y="20" width="38" height="32"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="32" id="wxT-hp-abf"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                        <state key="normal" title="Save"/>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Update Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HKC-2g-GMs">
-                                        <rect key="frame" x="227" y="28" width="146" height="24"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="a6m-Fe-Tm4"/>
-                                            <constraint firstAttribute="width" constant="146" id="vAv-WV-vZ3"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="0.066666666669999999" green="0.63529411759999999" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="0nk-pV-iWo" secondAttribute="bottom" constant="8" id="1SL-Or-CUn"/>
-                                    <constraint firstAttribute="bottom" secondItem="y0z-bs-72g" secondAttribute="bottom" constant="8" id="6jJ-fc-Kdd"/>
-                                    <constraint firstItem="y0z-bs-72g" firstAttribute="leading" secondItem="0gW-wi-cfr" secondAttribute="leading" constant="8" id="E6A-B1-2To"/>
-                                    <constraint firstAttribute="bottom" secondItem="HKC-2g-GMs" secondAttribute="bottom" constant="8" id="Pkb-ZL-jRM"/>
-                                    <constraint firstAttribute="trailing" secondItem="0nk-pV-iWo" secondAttribute="trailing" constant="8" id="j3e-ne-qsd"/>
-                                    <constraint firstItem="HKC-2g-GMs" firstAttribute="centerX" secondItem="0gW-wi-cfr" secondAttribute="centerX" id="jGC-92-1TM"/>
-                                    <constraint firstAttribute="height" constant="60" id="mth-9X-x1z"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="0gW-wi-cfr" firstAttribute="top" secondItem="uXp-an-ne7" secondAttribute="top" id="JOl-wK-Xsj"/>
-                            <constraint firstAttribute="trailing" secondItem="0gW-wi-cfr" secondAttribute="trailing" id="f1g-CM-cob"/>
-                            <constraint firstItem="0gW-wi-cfr" firstAttribute="leading" secondItem="uXp-an-ne7" secondAttribute="leading" id="s6b-8Y-9hp"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xDx-UO-3s9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1264" y="1361"/>
-        </scene>
-        <!--Update NotesVC-->
         <scene sceneID="8ah-8z-T6L">
             <objects>
                 <viewController id="PGZ-8M-Bbd" customClass="updateNotesVC" customModule="Your_Valult" customModuleProvider="target" sceneMemberID="viewController">
@@ -887,7 +829,7 @@
                                     <constraint firstAttribute="bottom" secondItem="aNe-68-jQE" secondAttribute="bottom" constant="8" id="rrR-2c-uWL"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="Body" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rsD-af-RwM">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rsD-af-RwM">
                                 <rect key="frame" x="6" y="68" width="588" height="383"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
